Add intro examples and index with links

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <title>Hello, World! - A-Frame</title>
     <meta name="description" content="Hello, World! - A-Frame">
-    <script src="https://aframe.io/releases/0.3.2/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
   </head>
   <body>
-    <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
-    </a-scene>
+    <p><a href="intro/primitives" target="_blank">1. Primitives</a></p>
+    <p><a href="intro/inheritance" target="_blank">2. Inheritance</a></p>
+    <p><a href="intro/assets" target="_blank">3. Assets management</a></p>
+    <p><a href="intro/lights" target="_blank">4. Lights</a></p>
+    <p><a href="intro/animation" target="_blank">5. Animation</a></p>
+    <p><a href="intro/interaction" target="_blank">6. Interaction</a></p>
+    <p><a href="intro/component" target="_blank">7. Creating a Component</a></p>
   </body>
 </html>
