--- a/intro/assets.html
+++ b/intro/assets.html
@@ -14,6 +14,7 @@
           src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/sechelt.jpg">
       </a-assets>
       <a-box src="#boxTexture" position="0 2 -5" rotation="0 45 45" scale="2 2 2"></a-box>
+      <a-box src="#boxTexture" position="5 2 -5" rotation="0 45 45" scale="2 2 2"></a-box>
       <a-sky src="#skyTexture"></a-sky>
     </a-scene>
   </body>
