--- a/intro/inheritance.html
+++ b/intro/inheritance.html
@@ -11,7 +11,8 @@
       <a-box color="black" position="0 2 -10" rotation="0 45 45" scale="2 4 2">
         <a-box color="red" position="5 0 -3" ></a-box>
       </a-box>
-      <a-box color="red" position="5 0 -3" rotation="0 0 0" ></a-box>
+      <a-box color="red" position="5 0 -3"></a-box>
+      <a-box src="https://i.imgur.com/mYmmbrp.jpg" color="red" position="-5 0 -3" rotation="0 0 0" ></a-box>
     </a-scene>
   </body>
 </html>
